--- a/public/index.html
+++ b/public/index.html
@@ -24,26 +24,16 @@
     <div class="container">
 
       <div class="page-header">
-        <h1>Power</h1>
-      </div>
-
-      <div class="panel panel-default" ng-controller="SensorReading as sensor">
-        <div class="panel-heading">Sensor 1</div>
-        <div class="panel-body">
-          {{sensor.event.power0}}W <br/>
-          <small>at {{sensor.event.time}}</small>
-        </div>
-      </div>
-
-      <div id="sensor2"></div>
-
-
-      <div class="page-header">
         <h1>Temperature</h1>
       </div>
+      <temperature-display deviceid='1'></temperature-display>
+      <temperature-display deviceid='150'></temperature-display>
 
-      <div id="sensor3"></div>
-      <div id="sensor4"></div>
+      <div class="page-header">
+        <h1>Power</h1>
+      </div>
+      <power-display deviceid='2115'></power-display>
+
 
 <!--
   <SensorReading filterKey='dev_id' filterValue='2115' />,
