--- a/public/temperatureDisplay.html
+++ b/public/temperatureDisplay.html
@@ -1,7 +1,8 @@
 <div class="panel panel-default">
   <div class="panel-heading">Temperature</div>
   <div class="panel-body">
-    {{$ctrl.temperature_C}}°C <br/>
-    <small>for deviceid {{$ctrl.deviceid}}</small>
+    <div>{{$ctrl.temperature_C}}°C</div>
+    <div ng-if="$ctrl.humidity">{{$ctrl.humidity}}%RH</div>
+    <small>for deviceid {{$ctrl.deviceid}}</small><small ng-if="$ctrl.lowbattery" style="color:red"> low battery</small>
   </div>
 </div>
