--- a/public/temperatureDisplay.html
+++ b/public/temperatureDisplay.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">Temperature</div>
   <div class="panel-body">
     <div>{{$ctrl.temperature_C}}°C</div>
-    <div ng-if="$ctrl.humidity">{{$ctrl.humidity}}%RH</div>
-    <small>for deviceid {{$ctrl.deviceid}}</small><small ng-if="$ctrl.lowbattery" style="color:red"> low battery</small>
+    <div ng-if="$ctrl.humidity">{{$ctrl.humidity}}% RH</div>
+    <small>for deviceid {{$ctrl.deviceid}}</small> <span ng-if="$ctrl.lowbattery" style="color:red" class="fa fa-battery-quarter"></span>
   </div>
 </div>
