--- a/public/powerDisplay.html
+++ b/public/powerDisplay.html
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">Power</div>
   <div class="panel-body">
-    {{$ctrl.power}}W <br/>
-    <small>for deviceid {{$ctrl.deviceid}}</small>
+    <span class="text-muted fa fa-plug"></span> {{$ctrl.power}}W <br/>
+    <small style="opacity: 0.3">deviceid {{$ctrl.deviceid}}</small>
   </div>
 </div>
