--- a/public/index.html
+++ b/public/index.html
@@ -24,12 +24,18 @@
     <script src="app.js"></script>
   </head>
   <body ng-app="rtl433webmon">
+    <br/>
     <div class="container">
 
-      <temperature-display deviceid='1'></temperature-display>
-      <temperature-display deviceid='150'></temperature-display>
-
-      <power-display deviceid='2115'></power-display>
+      <div class="row">
+        <div class="col-sm-3 col-xs-6">
+          <temperature-display deviceid='1'></temperature-display>
+          <temperature-display deviceid='150'></temperature-display>
+        </div>
+        <div class="col-sm-3 col-xs-6">
+          <power-display deviceid='2115'></power-display>
+        </div>
+      </div>
 
     </div>
   </body>
