--- a/public/temperatureDisplay.html
+++ b/public/temperatureDisplay.html
@@ -1,8 +1,12 @@
 <div class="panel panel-default">
   <div class="panel-heading">Temperature</div>
   <div class="panel-body">
-    <div>{{$ctrl.temperature_C}}°C</div>
-    <div ng-if="$ctrl.humidity">{{$ctrl.humidity}}% RH</div>
-    <small>for deviceid {{$ctrl.deviceid}}</small> <span ng-if="$ctrl.lowbattery" style="color:red" class="fa fa-battery-quarter"></span>
+    <div>
+      <span class="text-muted fa fa-thermometer-quarter"></span> {{$ctrl.temperature_C}}°C
+    </div>
+    <div ng-if="$ctrl.humidity">
+      <span class="text-muted fa fa-tint"></span> {{$ctrl.humidity}}% RH
+    </div>
+    <small style="opacity: 0.3">deviceid {{$ctrl.deviceid}}</small> <span ng-if="$ctrl.lowbattery" style="color:red" class="fa fa-battery-quarter"></span>
   </div>
 </div>
