--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,11 @@
       <div class="row">
         <div class="col-sm-3 col-xs-6">
           <temperature-display deviceid='1'></temperature-display>
-          <temperature-display deviceid='150' temperature-offset="+0.5"></temperature-display>
+          <temperature-display deviceid='150' temperature-offset="+0"></temperature-display>
         </div>
         <div class="col-sm-3 col-xs-6">
           <power-display deviceid='2115'></power-display>
+          <air-quality-display></air-quality-display>
         </div>
       </div>
 
