--- a/public/powerDisplay.html
+++ b/public/powerDisplay.html
@@ -2,7 +2,7 @@
   <div class="panel-heading">Power</div>
   <div class="panel-body">
     <span class="text-muted fa fa-plug"></span> {{$ctrl.power}}W <br/>
-    <small style="opacity: 0.3">device {{$ctrl.deviceid}}</small><br/>
+    <small style="opacity: 0.3">(device {{$ctrl.deviceid}})</small><br/>
     <small style="opacity: 0.3">{{$ctrl.time}}</small>
   </div>
 </div>
