add electricity use (kwh/day)

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
         </div>
         <div class="col-sm-3 col-xs-6">
           <power-display deviceid='2115'></power-display>
+          <kwh-today-display deviceid='1'></kwh-today-display>
           <air-quality-display></air-quality-display>
         </div>
       </div>
